# posted

./: .gitignore  lifetime_script.py  pyproject.toml
cacoca_coupling/: cacoca_posted_coupling.py  coupling_test.py  generate_cacoca_input.py
inst/extdata/database/: flow_types.csv  sources.bib
latest/: 404.html  index.html  sitemap.xml
latest/api/: index.html
latest/data/: index.html
latest/data/Cement Plant/: Cement Plant.ipynb  index.html
latest/data/Coal Gasification/: Coal Gasification.ipynb  index.html
latest/data/Direct Reduction of Iron/: Direct Reduction of Iron.ipynb  index.html
latest/data/Electric Arc Furnace/: Electric Arc Furnace.ipynb  index.html
latest/data/Electrolysis/: Electrolysis.ipynb  index.html
latest/data/Fischer-Tropsch/: Fischer-Tropsch.ipynb  index.html
latest/data/Gas Turbine/: Gas Turbine.ipynb  index.html
latest/data/Haber-Bosch with Air Separation Unit/: Haber-Bosch with Air Separation Unit.ipynb  index.html
latest/data/Haber-Bosch with Reforming/: Haber-Bosch with Reforming.ipynb  index.html
latest/data/Integrated Blast Furnace and Basic Oxygen Furnace/: Integrated Blast Furnace and Basic Oxygen Furnace.ipynb  index.html
latest/search/: search_index.json
latest/sources/: index.html
lifetime_input/: lifetime_script.py
lifetime_input/input/: lifetime_biblipgraphy.bib  lifetime_table.xlsx  lifetime_table_old.xlsx
lifetime_input/output/: buildings_and_infrastructure_lifetime.csv
lifetime_input_output/: lifetime_script.py
lifetime_input_output/input/: lifetime_table.xlsx  lifetime_table_original.xlsx
(+18 files in other folders)
