[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "posted"
version = "0.3.0"
description = "POSTED: Potsdam open-source techno-economic database"
authors = [
    {name = "Philipp C. Verpoort", email = "philipp.verpoort@pik-potsdam.de"},
    {name = "Leo Heidweiler"},
    {name = "Paul Effing"},
]
license = {text = "MIT"}
readme = "README.md"
urls = {homepage = "https://github.com/PhilippVerpoort/posted/"}

requires-python = ">=3.10,<3.12"
dependencies = [
    "pyyaml>=6.0",
    "numpy>=1.24.2",
    "pandas>=2.2.3",
    "pint>=0.24.0",
    "sigfig>=1.3.2",
    "pybtex>=0.24.0",
    "pybtex-apa-style>=1.3",
    "iam-units>=2023.9.12",
    "pint-pandas>=0.6.2",
]

[project.optional-dependencies]
dev = [
    "plotly>=5.18.0",
    "igraph>=0.11.3",
    "matplotlib>=3.8.2",
    "openpyxl>=3.1.2",
    "itables>=2.1.1",
    "flake8>=7.1.0",
    "jupytext>=1.16.4",
    "jupyterlab>=4.2.4",
]

documentation = [
    "mkdocs-material>=9.5.26",
    "mkdocstrings>=0.25.1",
    "mkdocstrings-python>=1.10.3",
    "mkdocs-jupyter>=0.24.7",
    "pymdown-extensions>=10.8.1",
    "mike>=2.1.2",
    "rd2md>=1.0.1",
]

[project.scripts]
posted = "posted.cmdline:main"

[tool.setuptools]
packages = {find = {where = ["python"]}}
package-data = {"posted" = ["data/**/*"]}